[gd_scene load_steps=2 format=3 uid="uid://dafea565w2mk1"]

[ext_resource type="Script" path="res://Scripts/EndScreen.gd" id="1_yhrlb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yhrlb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Replay" type="Button" parent="."]
offset_left = 264.0
offset_top = 474.0
offset_right = 588.0
offset_bottom = 578.0
text = "Play Again"

[node name="Exit" type="Button" parent="."]
offset_left = 263.0
offset_top = 627.0
offset_right = 587.0
offset_bottom = 731.0
text = "Exit
"

[node name="WinnerLabel" type="Label" parent="."]
offset_left = 261.0
offset_top = 59.0
offset_right = 335.0
offset_bottom = 84.0
scale = Vector2(5, 5)
text = "You Win"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = -1
offset_left = 308.0
offset_top = 219.0
offset_right = 349.0
offset_bottom = 242.0
grow_horizontal = 2
scale = Vector2(5, 5)
text = "5 - 10"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
